# robotics-2015

./: .gitignore
core/: .clang_complete  InterpreterModule.cpp  InterpreterModule.h  Module.h  MotionCore.cpp  MotionCore.h  VisionCore.cpp  VisionCore.h
core/behavior/: BehaviorModule.h
core/common/: Bowdoin14Field.h  CoachPacket.h  ColorConversion.cpp  ColorConversion.h  Enum.h  ImageParams.cpp  Keyframe.cpp  Keyframe.h  KeyframeSequence.cpp  KeyframeSequence.h  Profiling.cpp  Profiling.h  RC2013Field.h  RobotCalibration.h  RobotConfig.cpp  RobotConfig.h  RobotInfo.h  Serializable.cpp  Serializable.h  States.h  TeamConfig.cpp  TeamConfig.h  TeamPacket.h  ToolPacket.cpp  ToolPacket.h  UTField.h  Util.cpp  Util.h  WorldObject.cpp  WorldObject.h  YamlConfig.cpp  YamlConfig.h
core/communications/: CommunicationModule.cpp  CommunicationModule.h  StreamingMessage.h
core/kinematics/: ForwardKinematics.h
core/localization/: LocalizationModule.cpp  LocalizationModule.h  LocalizationParams.h  ParticleFilter.cpp  ParticleFilter.h
core/math/: Geometry.cpp  Geometry.h  MatrixOperations.h  Pose2D.h  Vector2.h
core/memory/: .gitignore  AudioProcessingBlock.h  BehaviorBlock.h  FrameInfoBlock.h  GameStateBlock.cpp  GameStateBlock.h  ImageBlock.cpp  ImageBlock.h  JointBlock.h  JointCommandBlock.h  KickParamBlock.h  KickRequestBlock.h  LEDBlock.h  LocalizationBlock.cpp  LocalizationBlock.h  Log.cpp  Log.h  LogMetadata.cpp  LogMetadata.h  LogReader.cpp  LogReader.h  Logger.cpp  Logger.h  Memory.cpp  MemoryBlock.cpp  MemoryBlock.h  MemoryCache.cpp  MemoryCache.h  OdometryBlock.h  OpponentBlock.h  PrivateMemory.cpp  RobotStateBlock.cpp  RobotStateBlock.h  RobotVisionBlock.cpp  RobotVisionBlock.h  SensorBlock.h  StreamBuffer.cpp  StreamBuffer.h  TeamPacketsBlock.h  TextLogger.cpp  (+6 more)
core/motion/: KickModule.cpp  KickModule.h
core/motion/rswalk2014/: BodyModel.hpp  CMakeLists.txt  ClippedGenerator.cpp  ClippedGenerator.hpp  DistributedGenerator.cpp  DistributedGenerator.hpp  GyroConfig.cpp  GyroConfig.h  PendulumModel.cpp  PendulumModel.hpp  RSWalkModule2014.cpp  RSWalkModule2014.h  Walk2014Generator.cpp  Walk2014Generator.hpp  WalkEnginePreProcessor.cpp  WalkEnginePreProcessor.hpp  runswift.cmake
core/motion/rswalk2014/types/: ActionCommand.hpp
core/opponents/: OppModule.cpp  OppModule.h  UKF4.cpp
core/python/: PythonModule.cpp  PythonModule.h  SwigFiles.txt  UTdebug.py  cfglocalization.py  cfgmap.py  cfgpose.py  cfgstiff.py  cfgwalk.py  commands.py  core.py  geometry.py  head.py  init.py  lights.py  mem_objects.py  memory.py  pose.py  primary_bvr.py  state_machine.py  task.py  util.py
core/python/behaviors/: keeper.py  kick.py  main.py  sample.py
core/sensor/: ButtonModule.cpp  SensorModule.cpp
core/sonar/: SonarModule.cpp  SonarModule.h
core/vision/: CameraMatrix.cpp  CameraMatrix.h  Classifier.cpp  Classifier.h  ImageProcessor.cpp  ImageProcessor.h  VisionModule.cpp
core/vision/enums/: Colors.h
core/vision/estimators/: BallEstimator.h  CrossEstimator.h  LikelihoodEstimator.h  RobotEstimator.h
core/vision/structures/: Blob.h  RobotCandidate.h  VisionParams.h
data/: .gitignore  ipList.txt
data/austin/: defaulttop.col
data/scripts/: naoqi  utwireless  wpa_supplicant.conf
data/simulators/: AttackerSim.yaml  GoalieSim.yaml  Localization.yaml  Vision.yaml
documentation/: github_server_setup.md  setup.md  simulation.md  tutorial.md
install/: .gitignore  bashrc_addenda  common.py  copy_wpa.py  fix_autoload.py  install  install_data  install_fft  install_game_controller  install_gcc  install_lab  install_libs  install_naoqi  install_python  install_qt  setup_robot
interfaces/memory_test/: CMakeLists.txt
interfaces/nao/: CMakeLists.txt
interfaces/nao/src/: AudioWrapper.cpp  AudioWrapper.h  dcmwrapper.cpp  naointerface.cpp  naointerface.h  naointerfacemain.cpp
interfaces/shared_motion/: CMakeLists.txt
interfaces/shared_vision/: CMakeLists.txt  main.cpp
interfaces/sim_spark/: CMakeLists.txt  Parser.h  RobotBehavior.cpp  RobotBehavior.h
lib/alglib/: ap.cpp  ap.h  compile
lib/yaml-cpp/: CMakeLists.txt  qibuild.manifest
tools/UTNaoTool/: AnalysisWidget.cpp  AnalysisWidget.h  AnnotationWidget.cpp  AnnotationWidget.h  CameraWindow.cpp  CameraWindow.h  ClassificationWidget.cpp  ClassificationWidget.h  ConfigWidget.cpp  ConfigWidget.h  ConfigWindow.cpp  ConfigWindow.h  ExtrinsicCalibrationWidget.cpp  ExtrinsicCalibrationWidget.h  FilesWindow.cpp  FilesWindow.h  ImageWidget.cpp  ImageWidget.h  IntrinsicCalibrationWidget.cpp  IntrinsicCalibrationWidget.h  JointsWindow.cpp  JointsWindow.h  KeyframeConfig.h  KeyframeItem.ui  KeyframeWidget.cpp  KeyframeWidget.h  KeyframeWidget.ui  LogEditorWindow.cpp  LogEditorWindow.h  LogSelectWindow.cpp  LogWidget.cpp  LogWindow.cpp  LogWindow.h  LogWindow.ui  MotionGLWidget.cpp  MotionGLWidget.h  MotionSimulation.cpp  MotionSimulation.h  MotionWidget.cpp  MotionWidget.h  (+29 more)
tools/UTNaoTool/UTOpenGL/: BasicGL.cpp  BasicGL.h  GLDrawer.cpp  GLDrawer.h  LocalizationGL.cpp  LocalizationGL.h  ObjectsGL.cpp  ObjectsGL.h  RobotGL.cpp  RobotGL.h
tools/UTNaoTool/annotations/: Annotation.cpp  Annotation.h  AnnotationAnalyzer.cpp  AnnotationAnalyzer.h  AnnotationGroup.cpp  AnnotationGroup.h  BaseAnnotation.h  EllipseSelection.h  LocalizationAnnotation.h  PolygonSelection.h  RectangleSelection.h  Selection.cpp  Selection.h  SelectionType.h
tools/UTNaoTool/calibration/: JointCalibrator.cpp  JointCalibrator.h
tools/UTNaoTool/simulation/: AttackerSimulation.cpp  AttackerSimulation.h  BehaviorSimulation.cpp  BehaviorSimulation.h  GoalieSimulation.cpp  IsolatedBehaviorSimulation.cpp  LocalizationSimulation.cpp  LocalizationSimulation.h  ObservationGenerator.cpp  ObservationGenerator.h  SimulatedPlayer.cpp  SimulatedPlayer.h  SimulationPath.cpp  SimulationPath.h
tools/color_classifier/: CMakeLists.txt  mainpage.dox  manifest.xml
tools/color_classifier/data/: default.col
tools/color_classifier/src/: ImageWidget.cpp  classification_window.cpp  main.cpp  main_window.cpp
tools/color_classifier/ui/: classification_window.ui
(+5 files in other folders)
